--- a/notebooks/User_Overview_analysis.ipynb
+++ b/notebooks/User_Overview_analysis.ipynb
@@ -1082,6 +1082,94 @@
     "plt.ylabel('Average')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overview of the users’ behavior on applications"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "application_columns = [\n",
+    "    \n",
+    "    'Social Media DL (Megabytes)', 'Social Media UL (Megabytes)',\n",
+    "    'Youtube DL (Megabytes)', 'Youtube UL (Megabytes)',\n",
+    "    'Netflix DL (Megabytes)', 'Netflix UL (Megabytes)',\n",
+    "    'Google DL (Megabytes)', 'Google UL (Megabytes)',\n",
+    "    'Email DL (Megabytes)', 'Email UL (Megabytes)',\n",
+    "    'Gaming DL (Megabytes)', 'Gaming UL (Megabytes)',\n",
+    "    'Other DL (Megabytes)', 'Other UL (Megabytes)'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id = 'IMSI'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_data = df.groupby(user_id).agg({\n",
+    "    'Dur. (s)': 'sum',  # Total session duration per user\n",
+    "    'IMSI': 'count',  # Number of xDR sessions per user\n",
+    "    'Total DL (Megabytes)': 'sum',  # Total download data per user\n",
+    "    'Total UL (Megabytes)': 'sum',  # Total upload data per user\n",
+    "    **{col: 'sum' for col in application_columns}  # Total data volume for each application\n",
+    "}).rename(columns={'IMSI': 'Number of xDR Sessions'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for app in ['Social Media', 'Youtube', 'Netflix', 'Google', 'Email', 'Gaming', 'Other']:\n",
+    "    aggregated_data[f'{app} Total Data (Megabytes)'] = aggregated_data[f'{app} DL (Megabytes)'] + aggregated_data[f'{app} UL (Megabytes)']\n",
+    "\n",
+    "\n",
+    "# Step 3: Display the aggregated data\n",
+    "aggregated_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
