--- a/notebooks/User Engagement Analysis.ipynb
+++ b/notebooks/User Engagement Analysis.ipynb
@@ -18,12 +18,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from load_data import load_data_using_sqlalchemy"
+    "from load_data import load_data_using_sqlalchemy\n",
+    "from utils import missing_values_table, convert_bytes_to_megabytes, outliers_table, fix_outlier, convert_ms_to_seconds"
    ]
   },
   {
