--- a/notebooks/User_Overview_analysis.ipynb
+++ b/notebooks/User_Overview_analysis.ipynb
@@ -227,7 +227,7 @@
     "]\n",
     "\n",
     "# Create the df DataFrame with the selected columns\n",
-    "df = df[columns].copy()"
+    "df = df[columns].copy()\n"
    ]
   },
   {
